2007-07-17  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* doc/unstable/*:
	updated HTML documentation.

2007-06-10  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* Everything in doc/ subdirectory.

	Update HTML documentation on web.

	* doc/commands/AddDecor.html:
	* doc/modules/modules.html:
	Removed.

	* doc/modules.html:
	Added.

2007-05-11  Scott Smedley  <ss(at)aao(dot)gov(dot)au>

	* Everything in doc/ subdirectory.

	Put HTML documentation on web.

2007-02-18  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* fvwm-logo/index.php:
	* fvwm-logo/fvwm-logo-black-transparent.svg:
	added svg version of the logo

2007-01-28  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* download/icons.php:
	renamed icon archives

	* generated/icon_download/fvwm_icons-20070101.tar.gz:
	* generated/icon_download/fvwm_icons-20070101.tar.bz2:
	new files
	* generated/icon_download/fvwm_icons.tgz:
	* generated/icon_download/fvwm_icons.tar.bz2:
	removed files

2007-01-20  Dominik Vogt  <dominik(dot)vogt(at)gmx(dot)de>

	* definitions.inc:
	updated for 2.5.21 release

	* doc/manpages:
	regenerated man pages

	* authors/index.php:
	* news/index.php:
	* documentation/faq/index.php:
	regenerated for 2.5.21

2007-01-15  Viktor Griph  <griph(at)dd(dot)chalmers(dot)se>

	* definitions.inc:
	updated for 2.5.20 release

	* news/index.php:
	* authors/index.php:
	* unstable/FvwmAnimate.php:
	* unstable/FvwmAuto.php:
	* unstable/FvwmBacker.php:
	* unstable/FvwmBanner.php:
	* unstable/FvwmButtons.php:
	* unstable/FvwmCommand.php:
	* unstable/FvwmConsole.php:
	* unstable/FvwmConsoleC.pl.php:
	* unstable/FvwmCpp.php:
	* unstable/FvwmDebug.php:
	* unstable/FvwmDragWell.php:
	* unstable/FvwmEvent.php:
	* unstable/FvwmForm.php:
	* unstable/FvwmGtk.php:
	* unstable/FvwmGtkDebug.php:
	* unstable/FvwmIconBox.php:
	* unstable/FvwmIconMan.php:
	* unstable/FvwmIdent.php:
	* unstable/FvwmM4.php:
	* unstable/FvwmPager.php:
	* unstable/FvwmPerl.php:
	* unstable/FvwmProxy.php:
	* unstable/FvwmRearrange.php: