@@ -1,3 +1,8 @@
+2007-08-20  Renato Caldas  <seventhguardian@gmail.com>
+
+	* donations.php:
+	fix broken php comments within html code
+
 2007-07-17  Scott Smedley  <ss(at)aao(dot)gov(dot)au>
 
 	* doc/unstable/*:
